
syntax = "proto3";

package user

service UserService {
    rpc getUserInfo(UserInfoReq) returns (UserInfoRsp) {}
}

message UserInfoReq {
    string name = 1;
}

message UserInfoRsp {
    int64 id = 1;
    string name = 2;
    repeated string hobby = 3;
}

